# ParticleEffectsSimulation_CUDA

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: common.h  config.h  cpu.c  cpu.h  cuda.cu  cuda.cuh  helper.c  helper.h  main.cu  main.h  openmp.c  openmp.h
